--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -101,6 +101,38 @@
                     app:layout_constraintTop_toTopOf="@id/darkModeIcon"
                     app:layout_constraintBottom_toBottomOf="@id/darkModeIcon" />
 
+
+                <ImageView
+                    android:id="@+id/notificationIcon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_notifications"
+                    app:tint="?attr/colorOnSurface"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/darkModeIcon"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+
+                <TextView
+                    android:id="@+id/notificationText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Notifications"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toEndOf="@id/notificationIcon"
+                    app:layout_constraintTop_toTopOf="@id/notificationIcon"
+                    app:layout_constraintBottom_toBottomOf="@id/notificationIcon" />
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                    android:id="@+id/notificationSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/notificationIcon"
+                    app:layout_constraintBottom_toBottomOf="@id/notificationIcon" />
+
+
                 <com.google.android.material.switchmaterial.SwitchMaterial
                     android:id="@+id/darkModeSwitch"
                     android:layout_width="wrap_content"
@@ -212,7 +244,7 @@
                     app:tint="?attr/colorOnSurface"
                     android:src="@drawable/logout"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/contactIcon"
+                    app:layout_constraintTop_toBottomOf="@id/logout"
                     app:layout_constraintBottom_toBottomOf="parent" />
 
                 <TextView
